new review with gantt chart

--- a/refs.bib
+++ b/refs.bib
@@ -338,40 +338,56 @@
   year={2014}
 }
 
-@article{ForresterAbout,
+@misc{ForresterAbout,
 author = {Research, Forrester},
 title = {About Forrester},
-publisher = {2014. [ONLINE]. Available in:http://www.forrester.com/marketing/about/about-us.html}
+howpublished = "\url{http://www.forrester.com/marketing/about/about-us.html}",
+year = {2014}, 
+note = "[Online]"
 }
 
-@article{ForresterWave,
+@misc{ForresterWave,
 author = {Research, Forrester},
 title = {The Forrester Wave Methodology Guide},
-publisher = {2014. [ONLINE]. Available in:https://www.forrester.com/marketing/policies/forrester-wave-methodology.html}
+howpublished = "\url{https://www.forrester.com/marketing/policies/forrester-wave-methodology.html}",
+year = {2014}, 
+note = "[Online]"
 }
 
-@article{GartnerAbout,
+@misc{GartnerAbout,
 author = {Inc., Gartner},
 title = {About Us},
-publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/about.jsp}
+howpublished = "\url{http://www.gartner.com/technology/about.jsp}",
+year = {2014}, 
+note = "[Online]"
 }
 
-@article{GartnerMagicQuadrant,
+@misc{GartnerMagicQuadrant,
 author = {Inc., Gartner},
 title = {Gartner Magic Quadrant},
-publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_mq.jsp}
+howpublished = "\url{http://www.gartner.com/technology/research/methodologies/research_mq.jsp}",
+year = {2014}, 
+note = "[Online]"
 }
 
-@article{GartnerCriticalCapabilities,
+@misc{GartnerCriticalCapabilities,
 author = {Inc., Gartner},
 title = {Gartner Critical Capabilities},
-publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_critcap.jsp}
+howpublished = "\url{http://www.gartner.com/technology/research/methodologies/research_critcap.jsp}",
+year = {2014}, 
+note = "[Online]"
 }
 
-@article{GartnerMarketScope,
+@misc{GartnerMarketScope,
 author = {Inc., Gartner},
 title = {Gartner MarketScope},
-publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_markets.jsp}
+howpublished = "\url{http://www.gartner.com/technology/research/methodologies/research_markets.jsp}",
+year = {2014}, 
+note = "[Online]"
 }
+
+
+
+
 
 
