--- a/report.tex
+++ b/report.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{pifont}
+\usepackage{url}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{fixltx2e}
 \usepackage{mathtools}
@@ -66,7 +67,7 @@
 \newpage
 \appendix
 \input{sections/appendix.tex}
-
+\newpage
 
 
 % 
