--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -8,27 +8,35 @@ Such as your thesis work scheduling.
 
 \subsection{Appendix A - Work Scheduling Plan} 
 
+The next figure presents the Gantt Chart for this project.
+
+\begin{figure}[h!]
+\centering
+\includegraphics[height=0.8\textheight]{img/GanttChart.png}
+\caption{Gantt Chart for the project.}
+\end{figure}
+
 \vspace{10mm}
 
 \subsection{Appendix B - COBIT 5 Processes by domain} 
 
 The next figure presents the management and governance processes from COBIT 5 process framework, presented by domain.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{img/COBIT5ProcessFramework.png}
 \caption{COBIT 5 Processes. Extracted from \cite{2012cobit}.}
 \end{figure}
 
-\vspace{10mm}
+\newpage
 
 \subsection{Appendix C - ISO 19011 Audit Programme Management process} 
 
 The next figure presents the process flow purposed by ISO 19011 International standard for Audit programmes management.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{img/ISO19011AuditProcess.png}
+\includegraphics[width=0.9\textwidth]{img/ISO19011AuditProcess.png}
 \caption{ISO 19011 Audit Programme Management process. Extracted from \cite{ISO19011}.}
 \end{figure}
 
