--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -7,7 +7,7 @@
 \section{Work's Evaluation Methodology}
 
 This section corresponds to the ``Evaluation'' phase of DSRM methodology. We will present how we intent to evaluate our solution. For this project, besides the demonstration evaluation, where we will apply our processes to a real case scenario of an information systems administration of an organization, we will evaluate our solution using the Moody and Shanks Framework \cite{moody2003improving}, a framework to evaluate the quality of data models.\par
-We also pretend to evaluate our processes through interviews with the main stakeholders of this project, considering their opinion on the processes suitability and adequacy to the problem purposed. This will allow us to have feedback from the demonstration and evaluation steps of the DSRM process.\par
+We also pretend to evaluate our processes through interviews with the main stakeholders of this project, considering their opinion on the processes' suitability to the problem purposed. This will allow us to have feedback from the demonstration and evaluation steps of the DSRM process.\par
 Finally, and considering also the communication step of DSRM process, we will submit articles to conferences and journals where our solution will be evaluated and where we can receive feedback from specialists in the area. This articles will be developed in conformance with the conferences' and journals' calendar, being necessary to analyze the available options considering our project's calendar.\par
 
 \subsection{Moody and Shanks Framework}
@@ -28,7 +28,7 @@ For quality factors, that define how can we measure the quality of our model, th
 \item \textbf{Completeness} refers to whether the data model contains all user requirements.
 \item \textbf{Simplicity} means that the data model contains the minimum possible entities and relationships.
 \item \textbf{Flexibility} is defined as the ease with which the data model can cope with business and/or regulatory change.
-\item \textbf{Integration} is defined as the consistency of the data model with the rest of the organisation’s data.
+\item \textbf{Integration} is defined as the consistency of the data model with the rest of the organisation's data.
 \item \textbf{Understandability} is defined as the ease with which the concepts and structures in the data model can be understood.
 \item \textbf{Implementability} is defined as the ease with which the data model can be implemented within the time, budget and technology constraints of the project.
 \end{itemize}
@@ -37,6 +37,6 @@ For each quality factor, a set of metrics are presented for evaluation in \cite{
 
 \subsection{Interviews}
 
-Interviews are an evaluation method that will provide us feedback from the stakeholders, defining acceptance criteria for the solution. This interviews will be made, in majority, with the objective of after presenting a solution proposal, discuss which aspects of it are already covered and which ones need to be developed or iterated. This will allow us to apply the DSRM process, taking advantage of its iterative character to achieve a more complete solution.\par
+Interviews are an evaluation method that will provide us feedback from the stakeholders, defining acceptance criteria for the solution. This interviews will be made, in majority, with the objective of, after presenting a solution proposal, discuss which aspects of it are already covered and which ones need to be developed or iterated. This will allow us to apply the DSRM process, taking advantage of its iterative character to achieve a more complete solution.\par
 The objectives and expected results of each interview will be defined later, considering the project phase they are inserted, but in majority will be based on open interviews were we pretend, in closer collaboration with the stakeholders, define what is already achieved and what needs improvements with new iterations.\par  
 
