--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -8,17 +8,17 @@
 \section{A State of the Art in Frameworks for Information Technology Governance and Management}
 
 % Example citation:
-In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a framework or a set of them to implement our processes for project and maintenance management.\par
+In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a framework or a set of them to implement our processes.\par
 Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, presenting processes for achieving a successful implementation of this principles in an organization.
 
 \subsection{IT Governance and IT Management}
 
 One important concept to define is the difference between IT Governance and IT management. They are many times confused and some authors already tried to explain the difference between the two concepts.\par
 Considering the definition given in \cite{ITGovAndMech}, \textit{``IT Management is focused on the internal effective supply of IT services and products and the management of present IT operations. IT Governance in turn is much broader, and concentrates on performing and transforming IT to meet present and future demands of the business (internal focus) and the business' customers (external focus).''}.\par
- Considering the COBIT 5 view for this question \cite{2012cobit}, there is a \textit{``clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. it sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives.￼On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.''}\par
+ By the COBIT 5 view for this question \cite{2012cobit}, there is a \textit{``clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. it sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives.￼On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.''}\par
 
 
- Considering both definitions, we can conclude that IT Governance has a bigger dimension that IT Management, but both need to be related and complementary to achieve success inside an organization. It is not possible for an organization to have well defined and matured management processes that are no related to governance aspects, but governance needs management to achieve goals and objectives settled to achieve success.
+ Taking in account both definitions, we can conclude that IT Governance has a bigger dimension that IT Management, but both need to be related and complementary to achieve success inside an organization. It is not possible for an organization to have well defined and matured management processes that are no related to governance aspects, but governance needs management to achieve goals and objectives settled to achieve success.
 
 \subsection{COBIT 5}
 
@@ -34,17 +34,7 @@ As stated by ISACA \cite{2012cobit},\textit{``COBIT 5 provides a comprehensive f
 \end{itemize}
 
 
-It also defines seven enablers, explained by COBIT as factors that, individually and collectively, influence whether governance and management over enterprise will work or not. This enablers can be categorized as:
-
-\begin{itemize}
-  \item Principles, Policies and frameworks 
-  \item Processes 
-  \item Organizational structures
-  \item Culture, ethics and behavior 
-  \item Information
-  \item Services, infrastructure and applications
-  \item People, skills and competencies
-\end{itemize}
+It also defines seven enablers, explained by COBIT as factors that, individually and collectively, influence whether governance and management over enterprise will work or not.Figure 2 presents the COBIT 5 enablers previous defined and how they relate among themselves in terms of its importance for the organization. Each enabler has stakeholders, a set of goals, a life cycle and can be defined good practices for each one.\par
 
 \begin{figure}
 \centering
@@ -52,7 +42,7 @@ It also defines seven enablers, explained by COBIT as factors that, individually
 \caption{COBIT 5 enablers. Extracted from \cite{2012cobit}.}
 \end{figure}
 
-Figure 2 presents the COBIT 5 enablers previous defined and how they relate among themselves in terms of its importance for the organization. Each enabler has stakeholders, a set of goals, a life cycle and can be defined good practices for each one.\par
+
 
 \begin{figure}
 \centering
@@ -61,8 +51,8 @@ Figure 2 presents the COBIT 5 enablers previous defined and how they relate amon
 \end{figure}
 
 Considering figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
-All processes for management and governance are presented in the Appendix B and all the implementation details explained in COBIT 5: Enabling Processes\cite{2012cobitEP}, a detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation, governance and management practices, and the process reference model.\par
-Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
+All processes for management and governance are presented in the Appendix B and all the implementation details explained in COBIT 5: Enabling Processes\cite{2012cobitEP}, a detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation and governance and management practices.\par
+Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards.\par
 
 \begin{figure}[h!]
 \centering
@@ -146,10 +136,7 @@ One important aspect of the use of COBIT is that it provides a more business and
 
 First developed in the 1980s by the actual Office of Government Commerce (OGC), a branch of the British Government, ITIL defines processes for IT Service management at a high level. Each organization that intents to apply ITIL for service management should adapt and implement it in the most suitable manner to accomplish  particular objectives and needs.\cite{hill2006combine}\par
 On the last years, ITIL became an important standard worldwide for organizations as the guideline for IT service management (ITSM) processes. Its guidance can be used to transform service management capabilities into strategic assets, that will become fundamental to build distinctiveness to the concurrents and deliver services with higher performance and costumer satisfaction.\par
-The ITIL service management practices are comprised of three main sets of products and services: ITIL service management practices (core guidance), ITIL service management practices (guidance specific to industry sectors, organization types, operating models and technology architectures) and ITIL web support services.\par
-
-
-The core set, the one we will consider for this project, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.
+The ITIL service management practices are comprised of three main sets of products and services. The core set, and the one we will consider for this project, consists of six publications: Introduction to ITIL Service Management Practices, Service Strategy, Service Design, Service Transition, Service Operation and Continual Service Improvement. Each one of this volumes share the same conceptual structure, being composed by practice fundamentals and principles, life cycle processes and activities, supporting organization structures and roles, technology considerations, practice implementation and challenges, risks and critical success factors.\par
 
 \subsubsection{Service Strategy} 
 
@@ -213,35 +200,17 @@ As explained in the Continual Service Improvement volume \cite{itilST}, it \text
   \item Service Level Management
 \end{itemize} 
 
-\par Not different from COBIT,  ITIL takes public frameworks and standards as a form of the organization to have advantage on the market. Organizations should build their proprietary knowledge considering  all the knowledge provided by public frameworks and standards. In addition with this, collaboration and coordination between organizations became easier due to a set of shared practices and standards. According to a research performed by the UK Department of Trade and Industry (DTI), the value to the UK economy from standards is estimated to be about \textsterling2.5 billion per annum \cite{McNeillis01112005}.\par
-For related standards and frameworks to ITIL V3, we have ISO/IEC 20000 (service management system standards), ISO/IEC 27001 (standard providing requirements for an information security management system), PMBOK (manual for a set of standard terminology and guidelines for project management)\cite{pmbok5} and COBIT\cite{2012cobit}, already presented. This are the standards we will cover for our project by being directly related to ITIL V3 and its implementation.
-
 
 \subsubsection{ITIL V3 critical analysis}
 
-One crucial aspect for the importance of ITIL on this project is the operational view that it provides for IT Service Management. ITIL tries to focus on more management details, providing a more practical guidance for implementation. It is focused on IT Service Management and presents concrete guidance for managing services during its life cycle. De Haes and Van Grembergen state, in \cite{ITGovAndMech}, that COBIT tells what to do and ITIL explains how to do it, what makes COBIT adopting a process-focused approach and ITIL a service level-oriented one.\par
+One crucial aspect for the importance of ITIL on this project is the operational view that it provides for IT Service Management. ITIL tries to focus more on management details, providing a more practical guidance for implementation, namely managing services during its life cycle. De Haes and Van Grembergen state, in \cite{ITGovAndMech}, that COBIT tells what to do and ITIL explains how to do it, what makes COBIT adopting a process-focused approach and ITIL a service level-oriented one.\par
 The main objective to include ITIL knowledge for this project is to provide a complementary guidance on IT management, enhancing the business oriented view of COBIT with a operational view. COBIT 5 will allow us to take advantage of this complementarity, related to the concern of ISACA to make it more compliant with other frameworks, including ITIL, on the new version (relating to COBIT 4.1). 
 
 \subsection{PMBOK: A Guide to the Project Management Book of Knowledge}
 
-The Guide to the Project Management Body of Knowledge provides guidance on individual projects management and the concepts inherited to it. To achieve this, it presents the processes involved in the project management and project life cycle.\cite{pmbok5}\par
-This guide is considered by many professionals in all business management areas as the main reference for processes and good practices in project management, because it compiles a set of good practices that are applicable to most of the projects in most of the contexts, bringing value to all organizations and managers that use it as a reference.\par 
-The processes are presented in figure 5, relating them with the knowledge area they belong. The PMBOK presents the following areas of project management:
-
-\begin{itemize}
-  \item Integration Management
-  \item Scope Management
-  \item Time Management
-  \item Cost Management
-  \item Quality management
-  \item Human resource management
-  \item Communications management
-  \item Risk management
-  \item Procurement management
-  \item Stakeholder management
-\end{itemize} 
-
-Each group of processes is related with the life cycle of a project, being also grouped in five categories: Initiating, Planing, Executing, Monitoring and Control and Closing, directly related to the phase they are applied on the life cycle. For each process, it is presented the inputs, tools, techniques and outputs that are required to successfully implement it. All processes organized by group and area are presented in figure 6.\par
+The Guide to the Project Management Body of Knowledge provides guidance on individual projects management and the concepts inherited to it. To achieve this, it presents the processes involved in the project management and project life cycles.\cite{pmbok5}\par
+This guide is considered by many professionals in all business management areas as the main reference for processes and good practices in project management, because it compiles a set of knowledge that is applicable to a majority of the projects in most of the contexts, bringing value to all organizations and managers that use it as a reference.\par 
+The processes are presented in figure 5, relating them with the knowledge area they belong. Each group of processes is related with the life cycle of a project, being also grouped in five categories: Initiating, Planing, Executing, Monitoring and Control and Closing, directly related to the phase they are applied on the life cycle. For each process, it is presented the inputs, tools, techniques and outputs that are required to successfully implement it.\par
 
 \begin{figure}
 \centering
@@ -261,26 +230,15 @@ PMBOK presents processes for all phases of the life cycle of a project, being to
 
 \section{Relevant International Standards}
 
-In this section we will present the international standards that are referenced or important to complement the frameworks previously presented. These standards will allow us to design processes in conformance with practices that are considerer as the reference in some areas of project management.\par
-We will analyze the ISO/IEC 12207\cite{ISO12207}, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this project. It will provide an high-level process reference for the complete life cycle of a software system\par
+In this section we will present the international standards that are referenced or important to complement the frameworks previously presented. These standards will allow us to design processes in conformance with practices that are references in some areas of project management.\par
+We will analyze the ISO/IEC 12207\cite{ISO12207}, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this project. It will provide an high-level process reference for the complete life cycle of a software system.\par
 Relating to COBIT, we have standards that are directly correlated to it, as the ISO/IEC 20000\cite{ISO20000-1,ISO20000-2,ISO20000-3,ISO20000-4,ISO20000-5}, a set of international standards for IT service management, and ISO/IEC 27000\cite{ISO27000}, a set of international standards for information security management systems.\par
 For other standards more general to all frameworks we will present the ISO 31000\cite{ISO31000,IEC31010}, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011\cite{ISO19011}, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
 
 \subsection{ISO/IEC 12207}
 
 As described by ISO/IEC 12207:2008 \cite{ISO12207}, it \textit{``establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.''}. The main objective of this standard is to present standardized processes that will make easier the communication among all stakeholders in the software product life cycle.\par
-This standard groups the processes to be performed during the life cycle of a software project in seven groups . It presents, for each process, its objectives and expected results as well as the necessary activities to implement it. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure 6.
-
-\begin{itemize}
-  \item Agreement processes
-  \item Organizational Project-Enabling Processes
-  \item Project Processes
-  \item Technical Processes
-  \item Software Implementation Processes
-  \item Software Support Processes
-  \item Software Reuse Processes 
-\end{itemize}
-
+This standard groups the processes to be performed during the life cycle of a software project in seven groups . It presents, for each process, its objectives and expected results as well as the necessary activities to implement it. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure 6.\par
  
 \begin{figure}[h!]
 \centering
@@ -289,7 +247,7 @@ This standard groups the processes to be performed during the life cycle of a so
 \end{figure}
 
 It may be used standalone or jointly with ISO/IEC 15288\cite{ISO15288}, an international standard for system life cycle processes, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504\cite{ISO15504}, a set of technical standards documents for the computer software development processes assessment.\par
-This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding its scope. We will use this standard, specifically figure 6, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
+This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding of its scope. We will use this standard, specifically figure 6, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
 
 
 \subsection{ISO/IEC 20000}
@@ -335,7 +293,7 @@ ISO/IEC 27000\cite{ISO27000} is family of international standards related to Inf
 
 This family of standards is commonly used by organizations to implement frameworks for managing information security, protecting important assets as financial data or customers details. Information security is one of the main concerns on any organization, because information leaks or losses can have severe consequences for the overall organization.\par
 International standards as ISO 31000 and ISO 19011 are also related to this family of standards, making risk management and auditing management systems, respectively, areas that have direct impact on information security management systems. Dealing with information security is impossible without considering risk. The overall ISMS need to take account processes for risk identification, treatment and assessment for establishing a secure management system. Furthermore, and also related to risk, ISMS need to consider auditing management as a way to ensure information security and its correct management.\par
-This standard will be important for our project considering we deal with processes that consume and produce information, and all information is an important asset for any organization implement this processes, making this standard fundamental to establish an information security management system to protect all the information we deal with.\par
+This standard will be important for our project considering we deal with processes that consume and produce information, and all information is an important asset for any organization implement this processes, making this standard fundamental to establish an information security management system.\par
 
 
 \subsection{ISO 31000}
@@ -363,12 +321,12 @@ The relevance of ISO 31000 for this project focuses on its orientation to an imp
 \subsection{ISO 19011}
 
 As defined by this International Standard \cite{ISO19011}, \textit{``ISO 19011 provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.''}.\par
-In Appendix C it is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for our project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
+In Appendix C it is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for our project if we pretend to introduce the auditing processes in the scope of the processes to design.\par
 
 
 \section{A State of the Art in Market Solutions}
 
-Considering we are interested in developing a logical application architecture, we need to analyze solutions available on the market to compose this architecture. This solutions should be evaluated accordingly with its importance and benefit for project purposes, namely for improving our performance in project management and evolving maintenance.\par
+Considering we are interested in developing a logical application architecture, we need to analyze solutions available on the market to compose this architecture. This solutions should be evaluated accordingly with its importance and benefit for project's purposes\par
 Considering this two areas of interest for this project, we will perform an analysis of the solutions available on the market for Project and Portfolio Management Tools (PPM Tools) and for IT Service Support Tools (ITSM Tools). There are hundreds of solutions available for both tools, so we need to find mechanisms for narrowing and evaluating some of the solutions fairly and taking in account its functionalities and benefits for this project. Thus, we will use researches performed in this areas by Gartner and Forrester, two companies focused on IT research and advisory. Both companies provide techniques to evaluate PPM and ITSM tools, providing us the necessary information to evaluate the market offers and perform a usage proposal based on this results.\par
 
 \subsection{Gartner Research}
@@ -394,7 +352,7 @@ The objective of the Gartner Magic Quadrant\cite{GartnerMagicQuadrant} is to pro
 \caption{Gartner Magic Quadrant representation. Extracted from \cite{GartnerMagicQuadrant}.}
 \end{figure}
 
-This methodology is fundamental to analyze technology providers we can consider for adoption, but we need to take in account on how each provider aligns with the business goals of the organization. focusing on the leaders' quadrant is bot always the best option and we need to know what specific objectives we want to achieve to select the best provider for fulfilling our requirements. 
+This methodology is fundamental to analyze technology providers we can consider for adoption, but we need to take in account on how each provider aligns with the business goals of the organization. Focusing on the leaders' quadrant is not always the best option and we need to know what specific objectives we want to achieve to select the best provider for fulfilling our requirements. 
 
 
 \subsubsection{Gartner MarketScope}
@@ -509,7 +467,7 @@ Market Responsiveness and Track Record & High \\ \hline
 As stated by Forrester \cite{forresterWavePPM}, \textit{``Agile development disrupts operations and governance processes such as project/program portfolio management (PPM). That disruption drives a bifurcation in the tools market \- Traditional PPM doesn't suit the lighter-weight/lean governance processes that Agile projects require.''}. Considering this bifurcation, Forrester performed a 68-criteria evaluation of PPM vendors identifying the 10 most significant ones, comparing them  considering market's bifurcation and its constantly change.\par
 This research was performed considering two Forrester Wave Models. As defined by Forrester in \cite{forresterWavePPM}, \textit{``Above-the-line vendors serve enterprises primarily interested in portfolio planning, with linkage to tactical work planning and execution. Below-the-line vendors support enterprises seeking immediate help with planning, execution, and work management.''}.\par
 The vendors 68-evaluation criteria are grouped in three high-level groups: Current offering (deployment options, global support, and features for top-down portfolio planning or work-driven execution.), Strategy (product strategy, deployment options, support, and pricing) and Market Presence (revenue growth, financial strength, sales and support services, and the ability to support global implementations).\par
-The 10 vendors were selected following the vendor selection criteria presented in figure 14. Information about the products offered by this vendors are available in figure 15.\par
+The 10 vendors were selected following the vendor's selection criteria presented in figure 14. Information about the products offered by this vendors are available in figure 15.\par
 
 
 \begin{figure}[h!]
